fix: main overflow, exercise completed

--- a/css/style.css
+++ b/css/style.css
@@ -11,10 +11,6 @@ body {
   background-color: white;
 }
 
-.bottom-container {
-  display: flex;
-}
-
 aside {
   margin-top: 70px;
   width: 150px;
@@ -74,6 +70,11 @@ main {
 /* aside */
 .fa-chart-simple {
   width: 18px;
+}
+
+.links-container-inner:hover {
+  background-color: #838f99;
+  cursor: pointer;
 }
 /* /aside */
 
